# finbuddy-ai-assistant

./: .gitignore  README.md  pyproject.toml  run_agents.py  start_all.sh
agents/: budget_agent.py  credit_agent.py  decline_agent.py  filler_agent.py  mcp_agent.py  media_agent.py  pause_agent.py  progress_agent.py  reminder_agent.py  saving_agent.py  share_agent.py
backend_api/: agent_addresses.json  agent_registry.py  llm_response.py  models_shared.py
frontend/: main.py
